# rust-task-db

./: .gitignore  AGENTS.md  Cargo.toml  README.md  tasks.json
docs/: project-plan.md  prompt.md  review_docs.md  step-by-step-workflow.md
docs/beginner-codebase-guide/: 00-overview.md  01-project-map.md  02-reading-order.md  03-runtime-flow.md  04-feature-flows.md  06-language-from-code.md  07-framework-and-libraries.md  08-data-model.md  09-configuration.md  10-error-handling.md  11-testing.md  12-practice-tasks.md  13-common-mistakes.md  14-glossary.md  15-beginner-faq.md  16-run-guide.md  17-gluesql-internals.md  18-custom-storage.md  19-query-execution.md  20-storage-comparison.md  21-relational-task-management.md  99-index.md
docs/query-lab/: 00-overview.md  01-gluesql-plan-api.md  02-statement-plan-structure.md  03-plan-renderer.md  04-runtime-tracing.md  05-scan-and-index.md  06-join.md  07-aggregate.md  08-subquery.md  09-sort-limit.md  10-sargability.md  11-selectivity.md  12-dbms-comparison.md  13-contribution-candidates.md
docs/todo/: roadmap.md  step-1-progress.md  step-10-progress.md  step-11-progress.md  step-12-progress.md  step-13-progress.md  step-14-progress.md  step-15-progress.md  step-16-progress.md  step-17-progress.md  step-18-progress.md  step-19-progress.md  step-2-progress.md  step-20-progress.md  step-21-progress.md  step-22-progress.md  step-23-progress.md  step-24-progress.md  step-25-progress.md  step-26-progress.md  step-27-progress.md  (+20 more)
src/: cli.rs  command.rs  error.rs  main.rs  project.rs  repl.rs  service.rs  tag.rs  task.rs
(+14 files in other folders)
