[package]
name = "rust-task"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = "0.3"
gluesql = { version = "0.19.0", default-features = false, features = ["gluesql_memory_storage", "gluesql_sled_storage"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
